fix: wc-2936 forcing text align left causing issue on rtl

--- a/packages/atlas/src/themesource/atlas_core/web/core/widgets/_input.scss
+++ b/packages/atlas/src/themesource/atlas_core/web/core/widgets/_input.scss
@@ -172,7 +172,6 @@
         .control-label {
             overflow: hidden;
             margin-bottom: 4px;
-            text-align: left;
             text-overflow: ellipsis;
             color: var(--form-label-color);
             font-size: var(--form-label-size);
